# wrf-rust

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
assets/basemap/: upstream-lock.json
assets/basemap/natural_earth_110m/: README.md
crates/rustwx-core/: Cargo.toml  README.md
crates/rustwx-core/src/: lib.rs
crates/wrf-contour/: Cargo.toml
crates/wrf-contour/src/: engine.rs  error.rs  field.rs  geometry.rs  grid.rs  levels.rs  lib.rs  topology.rs
crates/wrf-core/: Cargo.toml
crates/wrf-core/src/: classic_netcdf_reader.rs  compute.rs  error.rs  extract.rs  file.rs  grid.rs  hdf5_reader.rs  lib.rs  multi.rs  projection.rs  pure_reader.rs  reader.rs  units.rs  variables.rs
crates/wrf-core/src/diag/: cape.rs  cloud.rs  ecape.rs  extra.rs  helicity.rs  mod.rs  moisture.rs  pressure.rs  radar.rs  severe.rs  srh.rs  thermo.rs  vorticity.rs  wind.rs
crates/wrf-core/src/met/: composite.rs  wind.rs
crates/wrf-ensemble/: Cargo.toml
crates/wrf-ensemble/examples/: render_ensemble.rs  render_ensemble_suite.rs
crates/wrf-ensemble/src/: lib.rs
crates/wrf-products/: Cargo.toml
crates/wrf-products/examples/: inspect_product_stats.rs  render_product.rs  render_suite.rs
crates/wrf-products/src/: lib.rs
crates/wrf-render/: Cargo.toml  README.md
crates/wrf-render/src/: color.rs  colorbar.rs  colormap.rs  colormaps.rs  contour_fill.rs  draw.rs  error.rs  features.rs  lib.rs  overlay.rs  panel.rs  presentation.rs  projected_map.rs  projection.rs  rasterize.rs  render.rs  request.rs  text.rs  weather.rs
crates/wrf-sounding/: Cargo.toml
crates/wrf-sounding/examples/: render_sounding.rs
crates/wrf-sounding/src/: lib.rs  native_table.rs
crates/wrf-store/: Cargo.toml
crates/wrf-store/src/: lib.rs
docs/: API_COMPATIBILITY.md  ARCHITECTURE.md  ENSEMBLES.md  MIGRATION_FROM_RUSTWX.md  index.html
docs/lib/: preflight-core.mjs
docs/starter-files/: README.md
python/wrf/: __init__.py  __main__.py  cli.py  explorer.py  plot.py  solar7.py  soundings.py  tui.py
skills/wrf-community-onboarding/references/: build-and-run.md  init-data.md  troubleshooting.md  windows-wsl.md
src/: lib.rs  py_file.rs  py_getvar.rs  py_opts.rs  py_sounding.rs
