[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[package]
name = "wrf-py"
version = "0.2.35"
edition.workspace = true
description = "Python bindings for wrf-rust — fast WRF post-processing"

[features]
default = ["pure-rust-reader"]
netcdf-backend = ["wrf-core/netcdf-backend"]
pure-rust-reader = ["wrf-core/pure-rust-reader"]

[lib]
name = "_wrf"
crate-type = ["cdylib"]

[dependencies]
wrf-core = { path = "crates/wrf-core", default-features = false }
wrf-sounding = { path = "crates/wrf-sounding" }
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
ndarray = "0.16"
