[package]
name = "wrf-ensemble"
version = "0.2.35"
edition.workspace = true
license.workspace = true
description = "First-class WRF ensemble reductions and product rendering"

[features]
default = ["pure-rust-reader"]
netcdf-backend = ["wrf-core/netcdf-backend", "wrf-products/netcdf-backend"]
pure-rust-reader = ["wrf-core/pure-rust-reader", "wrf-products/pure-rust-reader"]

[dependencies]
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
wrf-core = { path = "../wrf-core", default-features = false }
wrf-products = { path = "../wrf-products", default-features = false }
wrf-render = { path = "../wrf-render" }
