[package]
name = "wrf-products"
version = "0.2.35"
edition.workspace = true
license.workspace = true
description = "WRF product recipes and getvar-to-render glue"

[features]
default = ["pure-rust-reader"]
netcdf-backend = ["wrf-core/netcdf-backend"]
pure-rust-reader = ["wrf-core/pure-rust-reader"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rustwx-core = { path = "../rustwx-core" }
wrf-core = { path = "../wrf-core", default-features = false }
wrf-render = { path = "../wrf-render" }
